--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -22,7 +22,7 @@ body{
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+
 }
 
 
@@ -91,7 +91,7 @@ body{
     display: flex;
     flex-direction: column;
     width: 1700px;
-    height: 80%;
+    height: 1000px;
     justify-content: center;
     align-items: flex-start;
 }
@@ -134,4 +134,96 @@ body{
 
 .donatesurv:hover{
     background-color: #CD6326;
+}
+
+.articles{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 1368px;
+    background-color: gainsboro;
+    justify-content: space-between;
+    align-items: center;
+}
+.articles_text{
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    justify-content: center;
+}
+
+.articles_head{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 72px;
+    text-align: center;
+    color: #333333;
+}
+
+.articles_headd{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #666666;
+}
+
+.animals_image{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.articles_button{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+
+.animals_image{
+    display: flex;
+    width: 300px;
+    height: 360px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    transition: 0.5s;
+}
+
+.animal_name{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 36px;
+    color: #F7F7F7;
+    height: 36px;
+}
+
+.animal_text{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 17px;
+    line-height: 27px;
+    text-align: center;
+    color: #F7F7F7;
+    height: 75px;
+}
+
+.images{
+    display: flex;
+    width: 1700px;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+.notified_field{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 510px;
 }
