--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -220,10 +220,62 @@ body{
     flex-direction: row;
 }
 
-.notified_field{
+.articles_notified{
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+}
+
+.notified_text{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 27px;
+    line-height: 40px;
+    text-align: center;
+    color: #333333;
     justify-content: center;
     align-items: center;
-    height: 510px;
+}
+
+.notified_field{
+    display: flex;
+}
+
+.notified_input_email{
+    width: 540px;
+    height: 60px;
+    padding-left: 30px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 23px;
+    line-height: 27px;
+    display: flex;
+    align-items: center;
+    color: #666666;
+    border: none;
+    border: 1px solid #CD6326;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.notified_submit_send{
+    width: 120px;
+    height: 60px;
+    border: none;
+    background-color: #CD6326;
+    border: 1px solid #CD6326;
+    border-radius: 0px 5px 5px 0px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 23px;
+    line-height: 27px;
+    align-items: center;
+    text-align: center;
+    color: #F7F7F7;
+    transition: 0.1s;
+}
+
+.animals_image:hover{
+    transform:scale(1.3,1.3);
+}
+.articles_button:hover{
+    transform: scale(1.3,1.3);
 }
